k8s/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-local
  labels:
    app.kubernetes.io/part-of: distributed-platform
    environment: local
